2001-11-29  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_relay.c lib/b_ioh.c: Code review day 4

2001-11-28  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_memx.c lib/b_run.c lib/b_string.c lib/b_ioh.c: Code review day 3

2001-11-27  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_addrgroup.c lib/b_getbyfoo.c lib/b_netaddr.c
	lib/b_netinfo.c lib/b_netutils.c lib/b_protoinfo.c
	lib/b_servinfo.c lib/b_run.c lib/b_stdfun.c: Code review day 2

2001-11-28  James Tanis  <jtt@winwood.sysdetect.com>

	* test/test_getbyfoo.c (progrun): Fix up to conform to new API.

	* lib/b_addrgroup.c (do_net_init_af_inet_tcp_listen): Don't free
	bag.

2001-11-27  James Tanis  <jtt@winwood.sysdetect.com>

	* src/bttcp.c: Eliminate useless function.

2001-11-26  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_bits.c lib/b_general.c lib/b_config.c lib/b_debug.c
	lib/b_error.c lib/b_fileutils.c lib/b_fun.c lib/b_funlist.c:
	Day one, code review.

2001-11-26  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_fileutils.c (bk_fileutils_modify_fd_flags): Added SET
	option as per Seth's suggestion.

2001-11-21  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_addrgroup.c (bk_addrgroup_get_server_socket): Get the
	server socket from the handle.
	(bk_addrgroup_server_close): Close up the server based referenced
	by the handle.
	(as_server_copy): Copy an as from the server as to the connected as.
	Adjust everybody to send server_handle on callback.
	(tcp_listen_activity): Make sure you change the state of the *new*
	as not the old.
	Convert everybody to store complete state in as.

2001-11-20  James Tanis  <jtt@winwood.sysdetect.com>

	* src/bttcp.c: Converted to use new convenient interface. State
	code removed.

	* lib/b_netutils.c (bk_netutils_make_conn): Make a connection with
	a convenient interface.
	(sss_connect_rgethost_complete): Call back when we've completed
	looking up the remote host.
	(sss_connect_lgethost_complete): Callback when we've completed